--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+    background-color: rgb(223, 223, 223);
+}
+
 .paragraph_spacing{
     line-height:120%;
     margin-left: 1.5%;
@@ -9,4 +13,20 @@ img.recipe_image{
     height: 20%;
     margin-top: 2%;
     margin-bottom: 1.5%;
+    border: 3px solid rgb(0, 0, 0)
+}
+
+.header_title{
+    font-size: 40px;
+    font-family: cursive;
+    text-align: center;
+}
+
+.recipe_list{
+    list-style-type: none;
+    text-align: center;
+}
+
+.right{
+    text-align: right;
 }
