--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,19 @@
     background-color: rgb(223, 223, 223);
 }
 
+header{
+    text-align: center;
+}
+
+.index_header{
+    font-size: 40px;
+    font-family: cursive;
+    text-align: center;
+}
+
 .paragraph_spacing{
     line-height:120%;
-    margin-left: 1.5%;
+    margin-left: 4%;
 }
 
 img.recipe_image{
@@ -13,13 +23,32 @@ img.recipe_image{
     height: 20%;
     margin-top: 2%;
     margin-bottom: 1.5%;
-    border: 3px solid rgb(0, 0, 0)
+    border: 3px solid rgb(0, 0, 0);
+    transition: width 0.3s ease-in-out 0.2s; /* animation to expand and shrink image if user hovers over it */
+    /* next 3 lines used for centering the image */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.header_title{
-    font-size: 40px;
-    font-family: cursive;
-    text-align: center;
+img.recipe_image:hover{
+    width: 40%;
+}
+
+.recipe_time > *, .recipe_time{
+    background-color: rgb(250, 236, 236);
+    width: 50%;
+}
+
+.recipe_time{
+    border-radius: 0.1%;
+    border-color: rgb(0, 0, 0);
+    border-width: 4px;
+    border-style: double;
+}
+
+.recipe_time_title{
+    margin-left: 2%;
 }
 
 .recipe_list{
