--- a/styles.css
+++ b/styles.css
@@ -64,30 +64,30 @@ header{
 
 .inner#chocolate_chip_coffee_cake_image{ 
     background: 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CCCC1.jpg) 0 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CCCC2.jpg) 300px 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CCCC3.jpg) 600px 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CCCC4.jpg) 900px 0;
+        url(docs/assets/images/CCCC1.jpg) 0 0, 
+        url(docs/assets/images/CCCC2.jpg) 300px 0, 
+        url(docs/assets/images/CCCC3.jpg) 600px 0, 
+        url(docs/assets/images/CCCC4.jpg) 900px 0;
     background-size: 300px 300px;
     background-repeat: no-repeat;
 }
 
 .inner#buffalo_chicken_sandwiches_image{ 
     background: 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/BCS1.jpg) 0 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/BCS2.jpg) 300px 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/BCS3.jpg) 600px 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/BCS4.jpg) 900px 0;
+        url(docs/assets/images/BCS1.jpg) 0 0, 
+        url(docs/assets/images/BCS2.jpg) 300px 0, 
+        url(docs/assets/images/BCS3.jpg) 600px 0, 
+        url(docs/assets/images/BCS4.jpg) 900px 0;
     background-size: 300px 300px;
     background-repeat: no-repeat;
 }
 
 .inner#cuban_ropa_vieja_image{ 
     background: 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CuRoVi1.jpg) 0 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CuRoVi2.jpg) 300px 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CuRoVi3.jpg) 600px 0, 
-        url(https://github.com/BPanoramic56/odin-recipes/blob/b722f4b3c3a367635bed814e0f22c12aa7d49d92/docs/assets/images/CuRoVi4.jpg) 900px 0;
+        url(docs/assets/images/CuRoVi1.jpg) 0 0, 
+        url(docs/assets/images/CuRoVi2.jpg) 300px 0, 
+        url(docs/assets/images/CuRoVi3.jpg) 600px 0, 
+        url(docs/assets/images/CuRoVi4.jpg) 900px 0;
     background-size: 300px 300px;
     background-repeat: no-repeat;
 }
