Added Odin Project and Github images

--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,7 @@ header{
     display: flex;
 }
 
-.github_page{
-    background: url(docs/assets/images/Github-Symbol.png) 100px 0;
-    flex: 1;
-}
-
-.github_page{
-    background: url(docs/assets/images/The-Odin-Project.png) 100px 0;
+.project_links{
     flex: 1;
 }
 
