--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,19 @@ header{
     display: flex;
     width: 100%;
     margin-top: 5%;
+    text-align: right;
+}
+
+.link-image{
+    text-align: center;
+    margin: 1%;
+}
+
+.link-image img{
+    text-align: center;
+    position: absolute;
+    display: flex;
+    flex-direction: collumn;
 }
 
 .links img{
