--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,21 @@
     background-color: rgb(223, 223, 223);
 }
 
-header{
-    text-align: center;
-}
-
-.subheader{
-    text-align: center;
-}
-
-.index_header{
-    font-size: 40px;
+.header-subheader-combine *{
     font-family: cursive;
     text-align: center;
+    margin: 0px;
+    padding: 0px;
+}
+.header-subheader-combine header{
+    font-size: 40px;
+}
+.header-subheader-combine h6{
+    font-size: 15px;
 }
 
 .links{
+    display: flex;
     width: 100%;
     margin-top: 5%;
     text-align: right;
@@ -38,6 +38,10 @@ header{
     width: 30px;
     height: 30px;
     border: rgb(250, 171, 171) dashed 1px;
+}
+
+.project_links{
+    flex: 1;
 }
 
 .recipes_header{
