--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+:root{
+    --element1: rgb(20,20,20);
+}
+
 *{
-    background-color: rgb(20, 20, 20);
+    background-color: var(--element1);
     color: rgb(255, 255, 255);
     
 }
@@ -9,11 +13,15 @@ body{
     padding: 0;
 }
 
+h5{
+    margin: 0;
+    padding: 0;
+}
 
 .header-subheader-combine *{
     font-family: cursive;
     text-align: left;
-    margin-left: 1%;
+    margin-left: 0%;
     padding: 0px;
     height: 10px;
     color: rgb(230, 230,230);
@@ -25,11 +33,12 @@ body{
 
 .header-subheader-combine h6{
     font-size: 15px;
-    margin-left: 3%;
+    margin-left: 2%;
 }
 
 .project-name-description *{
     display: inline-block;
+    margin-left: 2%;
 }
 
 .project-name-description h6{
@@ -47,6 +56,7 @@ body{
 .link-image{
     text-align: center;
     margin: 25px;
+    flex: 0;
 }
 
 .link-image img{
