--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 :root{
     --element1: rgb(20,20,20);
+    --card: rgb(62, 26, 129);
+    --white: rgb(255, 255, 255);
+    --black: rgb(0, 0, 0);
 }
 
 *{
     background-color: var(--element1);
-    color: rgb(255, 255, 255);
+    color: var(--white);
+}
+
+img {
+    float: left;
+    width:  100px;
+    height: 100px;
+    object-fit: cover;
 }
 
 body{
@@ -36,29 +46,42 @@ h5{
 }
 
 .master-projects-div{
-    display: grid;
-    grid-auto-rows: auto;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 100px;
 }
 
 .project-card{
+    width: 325px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0,0,0,2);
+    margin: 20px
+}
+
+.project-card img{
+    width: 100%;
+    padding-bottom: 15px; 
+/*     height: auto; */
+}
+
+.project-card h5{
+/*     font-size: 28px; */
+    margin-bottom: 8px;
+}
+
+.project-card btn{
     display: inline-block;
-    margin-left: 2%;
-    border: 2px solid #e7e7e7;
-    border-radius: 4px;
-    padding: .5rem;
-    background-color: rgb(15, 0, 54);
-    color: red;
+    width: 50%;
+    padding: 8px 16px;
+    background-color: var(--black);
+    text-decoration: none;
+    border: 4px;
+/*     margin-top: 16px; */
+    background-color: var(--white);
 }
 
-.project-card * {
-    background-color: rgb(15, 0, 54);
-}
-
-.project-card h6{
-    padding-left: 4%;
-}
 
 .links{
     display: flex;
