--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ h5{
 }
 
 .header-subheader-combine *{
-    font-family: cursive;
     text-align: center;
     margin-left: 0%;
     padding: 0px;
@@ -63,23 +62,27 @@ h5{
 .project-card img{
     width: 100%;
     padding-bottom: 15px; 
-/*     height: auto; */
 }
 
 .project-card h5{
-/*     font-size: 28px; */
     margin-bottom: 8px;
 }
 
-.project-card btn{
+.project-card .btn{
     display: inline-block;
-    width: 50%;
-    padding: 8px 16px;
-    background-color: var(--black);
+    width: 20%;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 10px;
+    padding-right: 20px;
+    color: black;
+    border-radius: 3px;
     text-decoration: none;
     border: 4px;
-/*     margin-top: 16px; */
+    margin: 16px;
+    white-space: nowrap;
     background-color: var(--white);
+    box-shadow: 0px 2px 4px color(display-p3 0.8275 0.7608 0.9843);
 }
 
 
