--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,17 @@
 :root{
-    --element1: rgb(20,20,20);
-    --card: rgb(62, 26, 129);
-    --white: rgb(255, 255, 255);
-    --black: rgb(0, 0, 0);
+    --Card: rgb(62, 26, 129);
+    --PageBackground: rgb(20,20,20); /* #141414 */
 }
 
 *{
-    background-color: var(--element1);
-    color: var(--white);
+    background-color: var(--PageBackground);
+    color: white;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
 img {
@@ -17,18 +21,55 @@ img {
     object-fit: cover;
 }
 
-body{
-    margin-left: 2%;
-    padding: 0;
-}
-
 h5{
     margin: 0;
     padding: 0;
 }
 
+.intro-div{
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--PageBackground);
+    transition: 1s;
+}
+
+.logo-header{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.logo-header img{
+    height: 500px;
+    width: 500px;
+}
+
+.intro-logo{
+    display: inline-block;
+    opacity: 0;
+    
+}
+
+.intro-logo.active{
+    bottom: 0;
+    opacity: 1;
+    transition: ease-in-out 0.4s;
+}
+
+.intro-logo.fade{
+    bottom: 150px;
+    opacity: 0;
+    transition: ease-in-out 0.5s;
+}
+
 .header-subheader-combine *{
-    text-align: center;
+    text-align: left;
     margin-left: 0%;
     padding: 0px;
     height: 10px;
@@ -46,17 +87,26 @@ h5{
 
 .master-projects-div{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
     margin-top: 100px;
+    transition: margin-left 0.3s;
 }
+
+.master-projects-div div:nth-child(1){animation-delay: 3000ms;}
+.master-projects-div div:nth-child(2){animation-delay: 3200ms;}
+.master-projects-div div:nth-child(3){animation-delay: 3400ms;}
+.master-projects-div div:nth-child(4){animation-delay: 3600ms;}
+.master-projects-div div:nth-child(5){animation-delay: 3800ms;}
 
 .project-card{
     width: 325px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,2);
-    margin: 20px
+    margin: 20px;
+    opacity: 0;
+    animation:  fadeIn ease 2.5s forwards;
 }
 
 .project-card img{
@@ -70,21 +120,139 @@ h5{
 
 .project-card .btn{
     display: inline-block;
-    width: 20%;
+    width: 28%;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 10px;
-    padding-right: 20px;
+    padding-right: 10px;
     color: black;
-    border-radius: 3px;
+    border-radius: 5px;
     text-decoration: none;
     border: 4px;
     margin: 16px;
     white-space: nowrap;
-    background-color: var(--white);
+    background-color: white;
     box-shadow: 0px 2px 4px color(display-p3 0.8275 0.7608 0.9843);
+    transition: box-shadow 0.5s ease;
 }
 
+.project-card .btn:hover{
+    box-shadow: 0px 2px 100px rgb(38, 30, 251);
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0; transform: translateY(+50px);}
+    100% {opacity: 1;transform: translateY(0px);}
+  }
+  
+
+nav{
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    height: 100%;
+    background-color: (98, 98, 98);
+    width: 80px;
+    overflow: hidden;
+    transition: width 0 2s linear;
+    box-shadow: 0 20px 35px 2px rgba(68, 61, 230, 0.566);
+    width: 80px;
+    transition: all 0.5s ease;
+}
+
+nav a span{
+    font-size: 18px;
+}
+
+nav a i, nav a span{
+    background-color: inherit;
+}
+
+.logo{
+    text-align: center;
+    display:flex;
+    transition: all 1s ease;
+    margin: 10px 0 0 10px;
+    transition: all 1 ease;
+}
+
+.logo:hover img, .logo:hover .nav-bar{
+    animation-name: logo-hover;
+    animation-timing-function: linear;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes logo-hover{
+    0% {filter:hue-rotate(0deg);}
+    100% {filter:hue-rotate(+0.1turn)}
+}
+
+.logo img{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+
+.logo span{
+    font-weight: bold;
+    padding-left: 15px;
+    font-size: 18px;
+}
+
+nav a{
+    position: relative;
+    color: rgb(98, 98, 98);
+    font-size: 14px;
+    display: table;
+    width: 300px;
+    padding: 10px;
+    padding-bottom: 15px;;
+    transition: all 0.5s ease;
+}
+
+.fas{
+    position: relative;
+    width: 70px;
+    height: 40px;
+    top: 14px;
+    font-size: 25px;
+    text-align: center;
+}
+
+.nav-item{
+    position: relative;
+    top: 12px;
+    margin-left: 10px;
+}
+
+nav a:hover{
+    background: white;
+}
+
+nav a:hover i, nav a:hover span{
+    color: black;
+}
+
+nav:hover{
+    width: 280px;
+    transition: all 0.5s ease;
+}
+
+ul{
+    list-style: none;
+}
+
+.main {
+    margin-left: 120px;
+    margin-top:40px;
+    transition: margin-left 0.5s;
+}
+
+.side-nav:hover + .main {
+    margin-left: 300px;
+}
 
 .links{
     display: flex;
